test/fail/infer15.v3
//@seman = TypeParamInferError @ 4:23
def s<A, B, C>(t: A) -> C;
def m() {
	var x: int = s(0);
}
